--- a/app/templates/landing/about.html
+++ b/app/templates/landing/about.html
@@ -3,10 +3,6 @@
 {% block title %}Sheriff Labs{% endblock %}
 {% block body %}
 
-    {% include "navbar.html" %}
-    <div class="container">
-        <h1>About</h1>
-        <h2>Sheriff of Absaroka County watches over you!</h2>
-    </div>
+    <script src="{{ url_for('static', filename='js/top-down.js') }}"></script>
 
 {% endblock %}
