--- a/app/templates/landing/home.html
+++ b/app/templates/landing/home.html
@@ -27,22 +27,52 @@
 
 	<div id="h">
 		<div>
-			<div class="row">
-				<img src="{{ url_for('static', filename='img/home.png') }}" class="pull-left" style="padding-left:20px; margin-bottom:100px;">
-			</div>
-			<div class="row">
-				<img src="{{ url_for('static', filename='img/about.png') }}" class="pull-left" style="padding-left:20px;">
-			</div>
-			<div class="row">
-				<img src="{{ url_for('static', filename='img/manifesto.png') }}" class="pull-left" style="padding-left:20px;">
-			</div>
-			<div class="row" style="padding-top:420px;">
+			<div class="row" style="padding-top:380px;">
 				<a href="/game"><img src="{{ url_for('static', filename='img/intro/playgame.png') }}"></a>
 			</div>
+			
+
 			<div class="row" style="padding-top:10px;">
-				<img src="{{ url_for('static', filename='img/intro/control.png') }}">
+				<button data-toggle="modal" data-target="#myModal">
+					<img src="{{ url_for('static', filename='img/intro/control.png') }}">
+				</button>
+			
+				<!-- Button trigger modal -->
+				<!-- <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+				  Launch demo modal
+				</button> -->
+
+				<!-- Modal -->
+				<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				      </div>
+				      <div class="modal-body">
+				        <img src="{{ url_for('static', filename='img/intro/control_sheet.png') }}" class="img-responsive" width=800 height=600>
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
+			</div>
+			
+
+
+			<div class="row" style="padding-top:10px;">
+				<img src="{{ url_for('static', filename='img/home.png') }}">
+				<img src="{{ url_for('static', filename='img/about.png') }}">
+				<img src="{{ url_for('static', filename='img/manifesto.png') }}">
 			</div>
 		</div>
 	</div>
+
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous">
+	</script>
+	<script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 
 {% endblock %}
