--- a/app/templates/landing/home.html
+++ b/app/templates/landing/home.html
@@ -59,14 +59,50 @@
 				  </div>
 				</div>
 
+				<!-- Modal -->
+				<div class="modal fade" id="myAboutModal" tabindex="-1" role="dialog" aria-labelledby="myAboutModal">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				      </div>
+				      <div class="modal-body">
+				        <img src="{{ url_for('static', filename='img/intro/created_by.png') }}" class="img-responsive" width=800 height=600>
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
+				<!-- Modal -->
+				<div class="modal fade" id="myManifestoModal" tabindex="-1" role="dialog" aria-labelledby="myManifestoModal">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				      </div>
+				      <div class="modal-body">
+				        <img src="{{ url_for('static', filename='img/intro/manifesto.png') }}" class="img-responsive" width=800 height=600>
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
 			</div>
 			
 
-
 			<div class="row" style="padding-top:10px;">
-				<img src="{{ url_for('static', filename='img/home.png') }}">
-				<img src="{{ url_for('static', filename='img/about.png') }}">
-				<img src="{{ url_for('static', filename='img/manifesto.png') }}">
+				<button data-toggle="modal" data-target="#myAboutModal">	
+					<img src="{{ url_for('static', filename='img/about.png') }}">
+				</button>
+				<button data-toggle="modal" data-target="#myManifestoModal">
+					<img src="{{ url_for('static', filename='img/manifesto.png') }}">
+				</button>
 			</div>
 		</div>
 	</div>
